JumpScript/tests/baselines/reference/parserES5ForOfStatement8.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement8.jump(1,15): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement8.jump (1 errors) ====
    for (var v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }